deploy/overlays/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmclasifierserver
  namespace: gihp4c
spec:
  ingressClassName: traefik
  rules:
    - host: backcmclasifier.gihp4c.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backcmclasifier
                port:
                  number: 80
